langtools/test/tools/javac/typeAnnotations/failures/common/wildcards/DuplicateAnnotationValue.out
DuplicateAnnotationValue.java:9:50: compiler.err.duplicate.annotation.member.value: value, A
1 error
